--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ main {
   padding-bottom: 50px;
 }
 
-main h1 {
+#task-heading {
   text-align: center;
   background: rgba(0, 0, 0, 0.35);
   border-top-left-radius: 10px;
@@ -43,6 +43,11 @@ main h1 {
   background: rgba(255, 255, 255, 0.35);
   color: #373737;
   padding: 15px;
+}
+
+.add-task {
+  background: rgba(255, 255, 255, 0.35);
+  padding-bottom: 20px;
 }
 
 .add-task-btn {
@@ -72,8 +77,7 @@ main h1 {
   cursor: pointer;
 }
 
-.edit-modal-container {
-  display: none;
+.modal-container {
   position: absolute;
   top: 0;
   left: 0;
@@ -83,7 +87,7 @@ main h1 {
   background: rgba(0, 0, 0, 0.7);
 }
 
-.edit-modal {
+.modal {
   text-align: center;
   width: 50vw;
   position: absolute;
@@ -96,11 +100,11 @@ main h1 {
   z-index: 2;
 }
 
-.edit-modal h2 {
+.modal h2 {
   font-size: 2.25rem;
 }
 
-.edit-modal-input {
+.modal-input {
   width: 80%;
   height: 50px;
   font-size: 1.5rem;
@@ -110,7 +114,7 @@ main h1 {
   color: rgba(0, 0, 0, 0.6);
 }
 
-.edit-modal button {
+.modal button {
   border: none;
   background: rgba(0, 0, 0, 0.5);
   display: block;
@@ -122,6 +126,14 @@ main h1 {
   color: rgba(255, 255, 255, 0.8);
   font-size: 1rem;
   cursor: pointer;
+}
+
+.edit-modal-container {
+  display: none;
+}
+
+.add-modal-container {
+  display: none;
 }
 
 @media (min-width: 768px) {
