--- a/style.css
+++ b/style.css
@@ -45,6 +45,40 @@ main {
   padding: 15px;
 }
 
+.controls {
+  padding-top: 15px;
+  display: flex;
+  justify-content: center;
+  background: rgba(255, 255, 255, 0.35);
+}
+
+.controls input {
+  background: rgba(255, 255, 255, 0.3);
+  border: 1px solid rgba(37, 37, 37, 0.1);
+  font-size: 1.2rem;
+  line-height: 1.7;
+  padding: 6px 15px;
+  color: rgba(55, 55, 55, 0.75);
+  border-radius: 5px;
+}
+
+.controls input::-webkit-input-placeholder {
+  /* Chrome/Opera/Safari */
+  text-align: center;
+}
+.controls input::-moz-placeholder {
+  /* Firefox 19+ */
+  text-align: center;
+}
+.controls input:-ms-input-placeholder {
+  /* IE 10+ */
+  text-align: center;
+}
+.controls input:-moz-placeholder {
+  /* Firefox 18- */
+  text-align: center;
+}
+
 .add-task {
   background: rgba(255, 255, 255, 0.35);
   padding-bottom: 20px;
@@ -70,6 +104,11 @@ main {
   justify-content: space-between;
   margin-bottom: 15px;
   align-items: center;
+}
+
+.task p {
+  padding-left: 35px;
+  font-size: 1.1rem;
 }
 
 .modify {
